fixed logos, chatroom creation & back to list on mobile

--- a/public/css/mobile1.css
+++ b/public/css/mobile1.css
@@ -1,3 +1,48 @@
 .container-fluid {
   width: 100%;
 }
+
+.popup-position {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  // The Modal Wrapper
+}
+
+#popup-wrapper {
+  text-align: left;
+}
+
+
+#popup-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  width: 100vw;
+  margin: 70px auto;
+}
+
+.fixed-top {
+  position: sticky;
+  background-color: aliceblue;
+}
+
+.popup-position {
+  z-index: 9000;
+  top: 10vh;
+  width: 100vw;
+  left: 0;
+  height: fit-content;
+}
+
+.form-floating>label {
+  left: 30px;
+}
+
+.mb-3 {
+  margin: 30px;
+}
